Name: Carbon-Haskell
Version: 0.0.0
Description: Implementation of random things in random languages
License: MIT
License-file: ../LICENSE
Author: Raekye
Maintainer: adrian@creatifcubed.com
bug-reports: https://github.com/Raekye/Carbon/issues
Build-Type: Simple
Cabal-Version: >=1.2

Test-Suite test
 type: exitcode-stdio-1.0
 Hs-Source-Dirs: src, testsuite/tests
 Main-Is: TestsMain.hs
 build-depends: base, test-framework, test-framework-quickcheck2, test-framework-hunit, QuickCheck, HUnit

benchmark bench-builder-all
 type: exitcode-stdio-1.0
 hs-source-dirs: src, testsuite/benchmarks
 main-is BenchMain.hs
 build-depends: base, criterion

Library
 Hs-Source-Dirs: src
 build-depends: base
